--- a/app/src/main/res/layout/activity_add_alumno.xml
+++ b/app/src/main/res/layout/activity_add_alumno.xml
@@ -10,17 +10,17 @@
         android:id="@+id/carrerap"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
+        android:layout_marginStart="8dp"
         android:layout_marginTop="6dp"
         android:hint="Carrera"
-        android:inputType="textEmailAddress"
+        android:inputType="text"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textInputLayout3"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp" />
+        app:layout_constraintTop_toBottomOf="@+id/textInputLayout3" />
 
     <TextView
         android:id="@+id/titulop"
@@ -74,7 +74,8 @@
             android:id="@+id/direccionp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Celular" />
+            android:hint="Celular"
+            android:inputType="number" />
     </android.support.design.widget.TextInputLayout>
 
     <android.support.design.widget.TextInputLayout
